index.html file name change

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
     <img src="cross-x-main-image.jpeg" alt="Background Shoe Image" width="1401" height="700" class = "bg-image">
     <div class = "bg-text">
       <h1 style = "font-size:x-large;font-weight: bold;">NEVER SAY X</h1>
-      <p>Welcome to cross-x! Your go-to destination for the latest developments in lifestyle and athletic footwear.
+      <p style = 'margin-top: 20px;'>Welcome to cross-x! Your go-to destination for the latest developments in lifestyle and athletic footwear.
         Whether you're running, training, or just looking for a stylish new pair, we've got the perfect fit for every adventure. 
         Explore our diverse collection and step up your game with the best shoes in the market!
       </p>
-      <button class="shop-button">Shop Shoes</button>
+      <button class="shop-button" style = 'margin-top: 20px;'>Shop Shoes</button>
     </div>
   </article>
   <div class="scroll-section">
-    <div class="scroll-header">
+    <div class="section-header">
       <h2>Best-Selling Shoes</h2>
       <button class="shop-button">Shop Now</button>
     </div>
@@ -50,11 +50,32 @@
       <div class="scroll-item"></div>
       <div class="scroll-item"></div>
       <div class="scroll-item"></div>
-      <div class="scroll-item"></div>
-      <div class="scroll-item"></div>
-      <div class="scroll-item"></div>
     </div>
   </div>
+  <article style="padding:20px;">
+    <div class="section-header">
+      <h2>Trending</h2>
+      <button class="shop-button">Shop Now</button>
+    </div>
+    <section class="product-section">
+      <div class="product-description">
+        <h2>Just In</h2>
+        <h3>Eon Foam Slides</h3>
+        <p>Description of the shoe goes here...</p>
+      </div>
+      <div class="product-images">
+        <div class="model-image">
+          <p>Insert Model Wearing Shoe</p>
+        </div>
+        <div class="normal-angle-image">
+          <p>Insert Shoe Picture</p>
+        </div>
+        <div class="different-angle-image">
+          <p>Insert Shoe Picture in Different Angle</p>
+        </div>
+      </div>
+    </section>    
+  </article>
   
 
   
