Finished filter logic and Filter, added normalise.css

--- a/index.html
+++ b/index.html
@@ -3,21 +3,24 @@
 <head>  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>cross-X</title>
+  <title>Cross-X</title>
+  <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="banner">
+    <a href="index.html">
     <h1>cross-x</h1>
+    </a>
   </div>
   <header class="navbar">
-    <div class="logo">X</div>
+    <a class="logo" href="index.html">X</a>
     <nav>
-      <a href="#">Clothing</a>
+      <a href="index.html">Home</a>
       <a href="#">Men</a>
       <a href="#">Women</a>
       <a href="#">Kids</a>
-      <a href="http://127.0.0.1:5500/shoes.html">Shoes</a>
+      <a href="shoes.html">Shoes</a>
     </nav>
     <div>
       <div style="padding: 15px;"><a href="#">Profile</a></div>
@@ -31,20 +34,24 @@
         Whether you're running, training, or just looking for a stylish new pair, we've got the perfect fit for every adventure. 
         Explore our diverse collection and step up your game with the best shoes in the market!
       </p>
+      <a href="shoes.html">
       <button class="shop-button">Shop Shoes</button>
+      </a>
     </div>
   </article>
   <div class="padding-section">
     <div class="section-header">
       <h2>Best-Selling Shoes</h2>
+      <a href="shoes.html">
       <button class="inverse-shop-button">Shop Now</button>
+      </a>
     </div>
     <div class="scroll-container">
-      <div class="scroll-item"></div>
-      <div class="scroll-item"></div>
-      <div class="scroll-item"></div>
-      <div class="scroll-item"></div>
-      <div class="scroll-item"></div>
+      <div class="rounded-item"></div>
+      <div class="rounded-item"></div>
+      <div class="rounded-item"></div>
+      <div class="rounded-item"></div>
+      <div class="rounded-item"></div>
     </div>
   </div>
   <article class="padding-section">
