Filter completed and working

--- a/shoes.html
+++ b/shoes.html
@@ -15,7 +15,7 @@
         </a>
     </div>
     <header class="navbar">
-    <a class="logo" href="http://127.0.0.1:5500/index.html">X</a>
+    <a class="logo" href="index.html">X</a>
     <nav>
         <a href="index.html">Home</a>
         <a href="#">Men</a>
@@ -76,106 +76,89 @@
               </div>
             </div>
           
-            <button id="submitFilters" class="submit-btn">Apply Filters</button>
+            <button id="apply-filters" class="submit-btn">Apply Filters</button>
           </div>
           <div class="shoes-container">
             <h2 style="color:#00274D">All Shoes</h2>
-            <div class="shoes">
                 <div class="rounded-item">
-                    <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/4067dec9-3570-40d8-87f9-3c9550dc58ca/AIR+JORDAN+3+RETRO.png" alt="">
-                    <h3 class="shoe-name"></h3>
-                    <p class="shoe-price"></p>
-                    <p class="shoe-gender"></p>
-                    <p class="shoe-sport"></p>
-                    <p class="shoe-size"></p>
+                    <img src="https://via.placeholder.com/200" alt="Bar 1">
+                    <h3>Bar 1</h3>
+                    <p>Price: $120</p>
+                    <p>Gender: Men</p>
+                    <p>Sport: Basketball</p>
+                    <p>Size: US10</p>
                 </div>
                 <div class="rounded-item">
-                    <img src="" alt="">
-                    <h3 class="shoe-name"></h3>
-                    <p class="shoe-price"></p>
-                    <p class="shoe-gender"></p>
-                    <p class="shoe-sport"></p>
-                    <p class="shoe-size"></p>
+                    <img src="https://via.placeholder.com/200" alt="Cronaldo Aces">
+                    <h3>Cronaldo Aces</h3>
+                    <p>Price: $140</p>
+                    <p>Gender: Men</p>
+                    <p>Sport: Football</p>
+                    <p>Size: US9</p>
                 </div>
                 <div class="rounded-item">
-                    <img src="" alt="">
-                    <h3 class="shoe-name"></h3>
-                    <p class="shoe-price"></p>
-                    <p class="shoe-gender"></p>
-                    <p class="shoe-sport"></p>
-                    <p class="shoe-size"></p>
+                    <img src="https://via.placeholder.com/200" alt="Gym Junkie">
+                    <h3>Gym Junkie</h3>
+                    <p>Price: $80</p>
+                    <p>Gender: Women</p>
+                    <p>Sport: Gym</p>
+                    <p>Size: US10</p>
                 </div>
                 <div class="rounded-item">
-                    <img src="" alt="">
-                    <h3 class="shoe-name"></h3>
-                    <p class="shoe-price"></p>
-                    <p class="shoe-gender"></p>
-                    <p class="shoe-sport"></p>
-                    <p class="shoe-size"></p>
+                    <img src="https://via.placeholder.com/200" alt="John 2">
+                    <h3>John 2</h3>
+                    <p>Price: $110</p>
+                    <p>Gender: Women</p>
+                    <p>Sport: Tennis</p>
+                    <p>Size: US7</p>
                 </div>
                 <div class="rounded-item">
-                    <img src="" alt="">
-                    <h3 class="shoe-name"></h3>
-                    <p class="shoe-price"></p>
-                    <p class="shoe-gender"></p>
-                    <p class="shoe-sport"></p>
-                    <p class="shoe-size"></p>
+                    <img src="https://via.placeholder.com/200" alt="Track Sprinter">
+                    <h3>Track Sprinter</h3>
+                    <p>Price: $130</p>
+                    <p>Gender: Men</p>
+                    <p>Sport: Track</p>
+                    <p>Size: US11</p>
                 </div>
                 <div class="rounded-item">
-                    <img src="" alt="">
-                    <h3 class="shoe-name"></h3>
-                    <p class="shoe-price"></p>
-                    <p class="shoe-gender"></p>
-                    <p class="shoe-sport"></p>
-                    <p class="shoe-size"></p>
+                    <img src="https://via.placeholder.com/200" alt="LeFrog 1s">
+                    <h3>LeFrog 1s</h3>
+                    <p>Price: $150</p>
+                    <p>Gender: Unisex</p>
+                    <p>Sport: Basketball</p>
+                    <p>Size: US12</p>
                 </div>
                 <div class="rounded-item">
-                    <img src="" alt="">
-                    <h3 class="shoe-name"></h3>
-                    <p class="shoe-price"></p>
-                    <p class="shoe-gender"></p>
-                    <p class="shoe-sport"></p>
-                    <p class="shoe-size"></p>
+                    <img src="https://via.placeholder.com/200" alt="Zoom Cleats">
+                    <h3>Zoom Cleats</h3>
+                    <p>Price: $100</p>
+                    <p>Gender: Unisex</p>
+                    <p>Sport: Football</p>
+                    <p>Size: US11</p>
                 </div>
                 <div class="rounded-item">
-                    <img src="" alt="">
-                    <h3 class="shoe-name"></h3>
-                    <p class="shoe-price"></p>
-                    <p class="shoe-gender"></p>
-                    <p class="shoe-sport"></p>
-                    <p class="shoe-size"></p>
+                    <img src="https://via.placeholder.com/200" alt="Ripppped">
+                    <h3>Ripppped</h3>
+                    <p>Price: $75</p>
+                    <p>Gender: Men</p>
+                    <p>Sport: Gym</p>
+                    <p>Size: US13</p>
                 </div>
                 <div class="rounded-item">
-                    <img src="" alt="">
-                    <h3 class="shoe-name"></h3>
-                    <p class="shoe-price"></p>
-                    <p class="shoe-gender"></p>
-                    <p class="shoe-sport"></p>
-                    <p class="shoe-size"></p>
+                    <img src="https://via.placeholder.com/200" alt="Tennis Smash">
+                    <h3>Tennis Smash</h3>
+                    <p>Price: $95</p>
+                    <p>Gender: Women</p>
+                    <p>Sport: Tennis</p>
+                    <p>Size: US5</p>
                 </div>
                 <div class="rounded-item">
-                    <img src="" alt="">
-                    <h3 class="shoe-name"></h3>
-                    <p class="shoe-price"></p>
-                    <p class="shoe-gender"></p>
-                    <p class="shoe-sport"></p>
-                    <p class="shoe-size"></p>
-                </div>
-                <div class="rounded-item">
-                    <img src="" alt="">
-                    <h3 class="shoe-name"></h3>
-                    <p class="shoe-price"></p>
-                    <p class="shoe-gender"></p>
-                    <p class="shoe-sport"></p>
-                    <p class="shoe-size"></p>
-                </div>
-                <div class="rounded-item">
-                    <img src="" alt="">
-                    <h3 class="shoe-name"></h3>
-                    <p class="shoe-price"></p>
-                    <p class="shoe-gender"></p>
-                    <p class="shoe-sport"></p>
-                    <p class="shoe-size"></p>
+                    <img src="https://via.placeholder.com/200" alt="Lylefly 4">
+                    <h3>Lylefly 4</h3>
+                    <p>Price: $120</p>
+                    <p>Gender: Unisex</p>
+                    <p>Sport: Track</p>
+                    <p>Size: US13</p>
                 </div>
             </div>
         </div>
