Added Folders for Organisation and Added Images to Products in Shoes

--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
     </div>
   </header>
   <article class="image-container">
-    <img src="cross-x-main-image.jpeg" alt="Background Shoe Image" width="1401" height="700" class = "bg-image">
+    <img src="cross-x-main-image.jpeg" alt="Background Shoe Image" class = "bg-image">
     <div class = "bg-text">
       <h1 style = "font-size:x-large;font-weight: bold;">NEVER SAY X</h1>
       <p style = 'margin-top: 20px;'>Welcome to cross-x! Your go-to destination for the latest developments in lifestyle and athletic footwear.
