Organised Files into Folders

--- a/html/index.html
+++ b/html/index.html
@@ -4,71 +4,67 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cross-X</title>
-  <link rel="stylesheet" href="normalize.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
   <div class="banner">
-    <a href="index.html">
+    <a href="/html/index.html">
     <h1>cross-x</h1>
     </a>
   </div>
   <header class="navbar">
-    <a class="logo" href="index.html">X</a>
+    <a class="logo" href="/html/index.html">X</a>
     <div class="navbar-right">
       <i class="fas fa-bars hamburger-icon"></i>
       <div class="hamburger-dropdown">
-        <a href="index.html">Home</a>
+        <a href="/html/index.html">Home</a>
         <a href="#">Men</a>
         <a href="#">Women</a>
         <a href="#">Kids</a>
-        <a href="shoes.html">Shoes</a>
+        <a href="/html/shoes.html">Shoes</a>
       </div>
-      <a href="cart.html" class="cart-button">
+      <a href="/html/cart.html" class="cart-button">
         <i class="fas fa-shopping-cart"></i>
       </a>
     </div>
   </header>
 
   <article class="image-container">
-    <img src="cross-x-main-image.jpeg" alt="Background Shoe Image" class = "bg-image">
+    <img src="/images/cross-x-main-image.jpeg" alt="Background Shoe Image" class = "bg-image">
     <div class = "bg-text">
       <h1>NEVER SAY X</h1>
       <p>Welcome to cross-x! Your go-to destination for the latest developments in lifestyle and athletic footwear.
         Whether you're running, training, or just looking for a stylish new pair, we've got the perfect fit for every adventure. 
         Explore our diverse collection and step up your game with the best shoes in the market!
       </p>
-      <a href="shoes.html">
-      <button class="shop-button">Shop Shoes</button>
-      </a>
+      <button class="inverse-shop-button" onclick="location.href='shoes.html';">Shop Now</button>
     </div>
   </article>
   <div class="padding-section">
     <div class="section-header">
       <h2>Best-Selling Shoes</h2>
-      <a href="shoes.html">
-      <button class="inverse-shop-button">Shop Now</button>
-      </a>
+      <button class="inverse-shop-button" onclick="location.href='shoes.html';">Shop Now</button>
     </div>
     <div class="scroll-container">
       <div class="rounded-item">
-        <img src="Bar-1.jpeg" alt="Bar 1 shoe Image">
+        <img src="/images/Bar-1.jpeg" alt="Bar 1 shoe Image">
       </div>
       <div class="rounded-item">
-        <img src="LeFrog-1s.jpeg" alt="LeFrog 1s shoe Image">
+        <img src="/images/LeFrog-1s.jpeg" alt="LeFrog 1s shoe Image">
       </div>
       <div class="rounded-item">
-        <img src="Cronaldo-Aces.jpeg" alt="Cronaldo Aces shoe Image">
+        <img src="/images/Cronaldo-Aces.jpeg" alt="Cronaldo Aces shoe Image">
       </div>
       <div class="rounded-item">
-        <img src="Lylefly-4.png" alt="Lylefly 4 shoe Image">
+        <img src="/images/Lylefly-4.png" alt="Lylefly 4 shoe Image">
       </div>
       <div class="rounded-item">
-        <img src="John-2.png" alt="John 2 shoe Image">
+        <img src="/images/John-2.png" alt="John 2 shoe Image">
       </div>
       <div class="rounded-item">
-        <img src="Zoom-Cleats.jpeg" alt="Zoom Cleats shoe Image">
+        <img src="/images/Zoom-Cleats.jpeg" alt="Zoom Cleats shoe Image">
       </div>
     </div>
   </div>
@@ -85,10 +81,10 @@
       </div>
       <div class="product-images">
         <div class="model-image">
-          <img src="Eon-Foam-Slides-1.png"  alt="Eon Foam Slide Model">
+          <img src="/images/Eon-Foam-Slides-1.png"  alt="Eon Foam Slide Model">
         </div>
         <div class="normal-angle-image">
-          <img src="Eon-Foam-Slides-2.png" alt="Eon Foam Slide Normal Angle Pictre">
+          <img src="/images/Eon-Foam-Slides-2.png" alt="Eon Foam Slide Normal Angle Pictre">
         </div>
       </div>
     </section>    
@@ -101,27 +97,27 @@
     <div class="scroll-container">
 
       <div class="scroll-by-sports">
-        <img src="sport1.png" alt="Football Image">
+        <img src="/images/sport1.png" alt="Football Image">
         <button class="scroll-by-sports-button">Football</button>
       </div>
 
       <div class="scroll-by-sports">
-        <img src="sport2.png" alt="Track Image">
+        <img src="/images/sport2.png" alt="Track Image">
         <button class="scroll-by-sports-button">Track</button>
       </div>
 
       <div class="scroll-by-sports">
-        <img src="sport3.png" alt="Basketball Image">
+        <img src="/images/sport3.png" alt="Basketball Image">
         <button class="scroll-by-sports-button">Basketball</button>
       </div>
 
       <div class="scroll-by-sports">
-        <img src="sport4.png" alt="Tennis Image">
+        <img src="/images/sport4.png" alt="Tennis Image">
         <button class="scroll-by-sports-button">Tennis</button>
       </div>
 
       <div class="scroll-by-sports">
-        <img src="sport5.png" alt="Gym Image">
+        <img src="/images/sport5.png" alt="Gym Image">
         <button class="scroll-by-sports-button">Gym</button>
       </div>
 
@@ -134,17 +130,17 @@
     <div class="slideshow-container">
 
       <div class="mySlides">
-        <img src="slideshow-1.jpeg">
+        <img src="/images/slideshow-1.jpeg" alt="Bar 1 Shoe">
         <div class="slideshow-text">Bar 1s Out Now</div>
       </div>
       
       <div class="mySlides">
-        <img src="slideshow-2.jpeg">
+        <img src="/images/slideshow-2.jpeg" alt="Bar 1 Shoe different angle">
         <div class="slideshow-text"></div>
       </div>
       
       <div class="mySlides">
-        <img src="slideshow-3.jpeg">
+        <img src="/images/slideshow-3.jpeg" alt="Bar 1 Shoe being worn by professional player">
         <div class="slideshow-text"></div>
       </div>
     </div>
@@ -160,5 +156,5 @@
       <button class="inverse-shop-button">Shop Bar 1s</button>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="/js/script.js"></script>
 </body>
