--- a/html/shoes.html
+++ b/html/shoes.html
@@ -4,28 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cross-X</title>
-  <link rel="stylesheet" href="normalize.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body style="background-color: #f1f1f1;">
   <div class="banner">
-    <a href="index.html">
+    <a href="/html/index.html">
     <h1>cross-x</h1>
     </a>
   </div>
   <header class="navbar">
-    <a class="logo" href="index.html">X</a>
+    <a class="logo" href="/html/index.html">X</a>
     <div class="navbar-right">
       <i class="fas fa-bars hamburger-icon"></i>
       <div class="hamburger-dropdown">
-        <a href="index.html">Home</a>
+        <a href="/html/index.html">Home</a>
         <a href="#">Men</a>
         <a href="#">Women</a>
         <a href="#">Kids</a>
-        <a href="shoes.html">Shoes</a>
+        <a href="/html/shoes.html">Shoes</a>
       </div>
-      <a href="cart.html" class="cart-button">
+      <a href="/html/cart.html" class="cart-button">
         <i class="fas fa-shopping-cart"></i>
       </a>
     </div>
@@ -84,7 +84,7 @@
           <div class="shoes-container">
             </div>
         </div>
-    <script src="script.js"></script>
-    <script src="shoescript.js"></script>
+    <script src="/js/script.js"></script>
+    <script src="/js/shoescript.js"></script>
     
 </body>
