took html out of html folder

--- a/html/cart.html
+++ b/html/cart.html
@@ -10,16 +10,16 @@
 </head>
 <body style="background-color: #f1f1f1;">
     <div class="banner">
-        <a href="/html/index.html">
+        <a href="index.html">
         <h1>cross-x</h1>
         </a>
     </div>
     <header class="navbar">
-        <a class="logo" href="/html/index.html">X</a>
+        <a class="logo" href="index.html">X</a>
         <div class="navbar-right">
           <i class="fas fa-bars hamburger-icon"></i>
           <div class="hamburger-dropdown">
-            <a href="/html/index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="#">Men</a>
             <a href="#">Women</a>
             <a href="#">Kids</a>
