Reverted to Previous Commit "Completed Media Queries for Shoe Page"

--- a/shoes.html
+++ b/shoes.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cross-X</title>
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body style="background-color: #f1f1f1;">
@@ -23,9 +23,9 @@
         <a href="#">Men</a>
         <a href="#">Women</a>
         <a href="#">Kids</a>
-        <a href="/html/shoes.html">Shoes</a>
+        <a href="shoes.html">Shoes</a>
       </div>
-      <a href="/html/cart.html" class="cart-button">
+      <a href="cart.html" class="cart-button">
         <i class="fas fa-shopping-cart"></i>
       </a>
     </div>
@@ -84,7 +84,7 @@
           <div class="shoes-container">
             </div>
         </div>
-    <script src="/js/script.js"></script>
-    <script src="/js/shoescript.js"></script>
+    <script src="script.js"></script>
+    <script src="shoescript.js"></script>
     
 </body>
